--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+    width: auto;
     margin: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,18 +9,22 @@ body {
   }
   * {
     font-family: "Verdana", cursive, sans-serif;
-    color: #ffffff;
   }
-  body {
-    background-color: #7cc6fe;
-    display: flex;
+  .header {
+    color: white;
+    min-height: 100px;
     justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    background-color: #234668;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .header h1 {
+    padding: 20px;
   }
   .app {
     background-image: url("mineral.jpg");
     background-color: #cccccc;
+    color: white;
     width: 450px;
     min-height: 200px;
     height: min-content;
@@ -27,32 +32,29 @@ body {
     padding: 20px;
     display: flex;
     justify-content: space-evenly;
+    /*justify-content: center;
+    align-items: center;*/
   }
-  
   .score-section {
     display: flex;
     font-size: 24px;
     align-items: center;
   }
-  
   /* QUESTION/TIMER/LEFT SECTION */
   .question-section {
     width: 100%;
     position: relative;
   }
-  
   .question-count {
     margin-bottom: 20px;
   }
-  
   .question-count span {
     font-size: 28px;
   }
-  
   .question-text {
     margin-bottom: 12px;
   }
-  
+  /*
   .timer-text {
     background: rgb(230, 153, 12);
     padding: 15px;
@@ -62,7 +64,7 @@ body {
     border-radius: 15px;
     text-align: center;
   }
-  
+  */
   /* ANSWERS/RIGHT SECTION */
   .answer-section {
     width: 100%;
@@ -70,7 +72,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
   }
-  
   button {
     width: 100%;
     font-size: 16px;
@@ -84,23 +85,18 @@ body {
     border: 5px solid #234668;
     cursor: pointer;
   }
-  
   .correct {
     background-color: #2f922f;
   }
-  
   .incorrect {
     background-color: #ff3333;
   }
-  
   button:hover {
     background-color: #555e7d;
   }
-  
   button:focus {
     outline: none;
   }
-  
   button svg {
     margin-right: 5px;
   }
